# finops-audit

./: README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
engines/: __init__.py  aws_engine.py  azure_engine.py  gcp_engine.py
tests/integration/: test_aws_integration.py  test_azure_integration.py  test_gcp_integration.py
tests/unit/: test_aws_engine.py  test_azure_engine.py  test_gcp_engine.py
